--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/style.scss">
     <title>Matilda Söderhäll</title>
   </head>
   <body>
-    
+    <header>
+      <div class="intro-container">
+        <h1>
+          <span>Matilda Söderhäll</span>
+          <span>Frontend Developer</span>
+        </h1>
+        <p></p>
+        <nav>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+        </nav>
+      </div>
+    </header>
+    <main>
+      
+    </main>
+    <footer></footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
