--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.scss">
+    <link rel="stylesheet" href="src/styles/main.scss">
     <title>Matilda Söderhäll</title>
   </head>
   <body>
