setup basic html structure

--- a/index.html
+++ b/index.html
@@ -14,18 +14,54 @@
           <span>Matilda Söderhäll</span>
           <span>Frontend Developer</span>
         </h1>
-        <p></p>
+        <p>Intro text</p>
         <nav>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
+          <a href="">linkedin</a>
+          <a href="">github</a>
+          <a href="">instagram</a>
         </nav>
       </div>
     </header>
+    <section>
+      <h2>Tech</h2>
+    </section>
     <main>
-      
+      <h2>Featured Projects</h2>
+      <article>
+        <div class="img-container">
+          <img src="" alt="">
+        </div>
+        <h3>Project Title</h3>
+        <p>Project description</p>
+        <div>
+          <span>techstack</span>
+          <span>techstack</span>
+          <span>techstack</span>
+        </div>
+        <button>View demo</button>
+        <button>Go to Github</button>
+      </article>
     </main>
-    <footer></footer>
+    <section>
+      <h2>Skills</h2>
+      <h3>Code</h3>
+      <ul>
+        <li>Html5</li>
+        <li>Css</li>
+      </ul>
+    </section>
+    <footer>
+     <h2>Get in touch!</h2>
+     <div class="img-container">
+      <img src="" alt="">
+     </div>
+     <h3>
+        <span>Matilda Söderhäll</span>
+        <span>Frontend Developer</span>
+     </h3>
+     <p>+46(0)722 13 32 25</p>
+     <p>matilda.soderhall@medieinstitutet.se</p>
+    </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
