add fonts and feather icons

--- a/index.html
+++ b/index.html
@@ -5,25 +5,35 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <title>Matilda Söderhäll</title>
   </head>
   <body>
     <header>
       <div class="intro-container">
         <h1>
-          <span>Matilda Söderhäll</span>
+          <span class="my-name">Matilda Söderhäll</span>
           <span>Frontend Developer</span>
         </h1>
-        <p>Intro text</p>
+        <p>Matilda is a front-end developer with a uniquely creative edge — they began their journey in the world of performing arts. Years on stage taught them storytelling, adaptability, and how to read a room — all skills they now channel into crafting intuitive, user-centered digital experiences. Whether they're integrating APIs or designing sleek interfaces, Matilda brings a blend of technical curiosity, aesthetic sensibility, and human insight that makes their work both functional and full of personality.</p>
         <nav>
-          <a href="">linkedin</a>
-          <a href="">github</a>
-          <a href="">instagram</a>
+          <a href="https://www.linkedin.com/in/matildasoderhall/" target="_blank">
+            <i data-feather="linkedin"></i>
+          </a>
+          <a href="https://github.com/matildasoderhall" target="_blank">
+            <i data-feather="github"></i>
+          </a>
+          <a href="https://www.instagram.com/matildasoderhall/" target="_blank">
+            <i data-feather="instagram"></i>
+          </a>
         </nav>
       </div>
     </header>
-    <section>
+    <section class="tech-container">
       <h2>Tech</h2>
+      <p>HTML, CSS, Sass, JavaScript, Vue, React, Node.js, Maria DB, Web Accessiblity, API:s, pari-programming, Github.</p>
     </section>
     <main>
       <h2>Featured Projects</h2>
@@ -42,12 +52,34 @@
         <button>Go to Github</button>
       </article>
     </main>
-    <section>
+    <section class="skills-container">
       <h2>Skills</h2>
       <h3>Code</h3>
       <ul>
         <li>Html5</li>
         <li>Css</li>
+        <li>JavaScript</li>
+        <li>Vue</li>
+        <li>Node.js</li>
+        <li>GitHub</li>
+      </ul>
+      <h3>Toolbox</h3>
+      <ul>
+        <li>Adobe Photoshop</li>
+        <li>Adobe InDesign</li>
+        <li>Figma</li>
+        <li>Miro</li>
+      </ul>
+      <h3>More</h3>
+      <ul>
+        <li>Agile methodology (Scrum)</li>
+        <li>Design Thinking</li>
+      </ul>
+      <h3>Upcomming</h3>
+      <ul>
+        <li>Testing</li>
+        <li>React</li>
+        <li>Cybersecurity</li>
       </ul>
     </section>
     <footer>
@@ -56,7 +88,7 @@
       <img src="" alt="">
      </div>
      <h3>
-        <span>Matilda Söderhäll</span>
+        <span class="my-name">Matilda Söderhäll</span>
         <span>Frontend Developer</span>
      </h3>
      <p>+46(0)722 13 32 25</p>
