add profile img and nav to footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <header>
+      <div class="circle-container">
+        <img src="./src/images/profilbild_small.jpg" alt="" width="2994" height="2994">
+      </div>
       <div class="intro-container">
         <h1>
           <span class="my-name">Matilda Söderhäll</span>
@@ -84,15 +87,32 @@
     </section>
     <footer>
      <h2>Get in touch!</h2>
-     <div class="img-container">
-      <img src="" alt="">
-     </div>
-     <h3>
-        <span class="my-name">Matilda Söderhäll</span>
-        <span>Frontend Developer</span>
-     </h3>
-     <p>+46(0)722 13 32 25</p>
-     <p>matilda.soderhall@medieinstitutet.se</p>
+      <div class="img-container">
+        <div class="circle-container">
+          <img src="./src/images/profilbild_small.jpg" alt="" width="2994" height="2994">
+        </div>
+      </div>
+      <div class="contact-info-container">
+        <h3>
+          <span class="my-name">Matilda Söderhäll</span>
+          <span>Frontend Developer</span>
+        </h3>
+        <div class="contact-details">
+          <p>+46(0)722 13 32 25</p>
+          <p>matilda.soderhall@medieinstitutet.se</p>
+        </div>
+        <nav>
+          <a href="https://www.linkedin.com/in/matildasoderhall/" target="_blank">
+            <i data-feather="linkedin"></i>
+          </a>
+          <a href="https://github.com/matildasoderhall" target="_blank">
+            <i data-feather="github"></i>
+          </a>
+          <a href="https://www.instagram.com/matildasoderhall/" target="_blank">
+            <i data-feather="instagram"></i>
+          </a>
+        </nav>
+      </div>
     </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
