add new fonts and colours

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="src/styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">>
     <title>Matilda Söderhäll</title>
   </head>
   <body>
@@ -36,24 +38,11 @@
     </header>
     <section class="tech-container">
       <h2>Tech</h2>
-      <p>HTML, CSS, Sass, JavaScript, Vue, React, Node.js, Maria DB, Web Accessiblity, API:s, pari-programming, Github.</p>
+      <p>HTML, CSS, Sass, JavaScript, Vue, React, Node.js, Maria DB, MongoDB, Web Accessiblity, API:s, par-programming, Github.</p>
     </section>
     <main>
       <h2>Featured Projects</h2>
-      <article>
-        <div class="img-container">
-          <img src="" alt="">
-        </div>
-        <h3>Project Title</h3>
-        <p>Project description</p>
-        <div>
-          <span>techstack</span>
-          <span>techstack</span>
-          <span>techstack</span>
-        </div>
-        <button>View demo</button>
-        <button>Go to Github</button>
-      </article>
+      <div id="projects-container"></div>
     </main>
     <section class="skills-container">
       <h2>Skills</h2>
