add layout and style to skills container

--- a/index.html
+++ b/index.html
@@ -46,33 +46,41 @@
     </main>
     <section class="skills-container">
       <h2>Skills</h2>
-      <h3>Code</h3>
-      <ul>
-        <li>Html5</li>
-        <li>Css</li>
-        <li>JavaScript</li>
-        <li>Vue</li>
-        <li>Node.js</li>
-        <li>GitHub</li>
-      </ul>
-      <h3>Toolbox</h3>
-      <ul>
-        <li>Adobe Photoshop</li>
-        <li>Adobe InDesign</li>
-        <li>Figma</li>
-        <li>Miro</li>
-      </ul>
-      <h3>More</h3>
-      <ul>
-        <li>Agile methodology (Scrum)</li>
-        <li>Design Thinking</li>
-      </ul>
+      <div class="code-skills">
+        <h3>Code</h3>
+        <ul>
+          <li>Html5</li>
+          <li>Css</li>
+          <li>JavaScript</li>
+          <li>Vue</li>
+          <li>Node.js</li>
+          <li>GitHub</li>
+        </ul>
+      </div>
+      <div class="toolbox-skills">
+        <h3>Toolbox</h3>
+        <ul>
+          <li>Adobe Photoshop</li>
+          <li>Adobe InDesign</li>
+          <li>Figma</li>
+          <li>Miro</li>
+        </ul>
+      </div>
+      <div class="more-skills">
+        <h3>More</h3>
+        <ul>
+          <li>SCRUM</li>
+          <li>Design Thinking</li>
+        </ul>
+      </div>
+     <div class="upcomming-skills">
       <h3>Upcomming</h3>
       <ul>
         <li>Testing</li>
         <li>React</li>
         <li>Cybersecurity</li>
       </ul>
+     </div>
     </section>
     <footer>
      <h2>Get in touch!</h2>
