--- a/index.html
+++ b/index.html
@@ -83,31 +83,29 @@
      </div>
     </section>
     <footer>
-     <h2>Get in touch!</h2>
+      <h2>Get in touch!</h2>
       <div class="img-container">
-        <img src="./src/images/profilbild_small.jpg" alt="" width="2994" height="2994" class="profile-img">
+        <img src="./src/images/profilbild_small.jpg" alt="" class="profile-img" width="2994" height="2994">
       </div>
-      <div class="contact-info-container">
-        <h3>
-          <span class="my-name">Matilda Söderhäll</span>
-          <span>Frontend Developer</span>
-        </h3>
-        <div class="contact-details">
-          <p>+46(0)722 13 32 25</p>
-          <p>matilda.soderhall@medieinstitutet.se</p>
-        </div>
-        <nav>
-          <a href="https://www.linkedin.com/in/matildasoderhall/" target="_blank">
-            <i data-feather="linkedin"></i>
-          </a>
-          <a href="https://github.com/matildasoderhall" target="_blank">
-            <i data-feather="github"></i>
-          </a>
-          <a href="https://www.instagram.com/matildasoderhall/" target="_blank">
-            <i data-feather="instagram"></i>
-          </a>
-        </nav>
+      <h3>
+        <span class="my-name">Matilda Söderhäll</span>
+        <span>Frontend Developer</span>
+      </h3>
+      <div class="contact-details">
+        <p>+46(0)722 13 32 25</p>          
+        <p>matilda.soderhall@medieinstitutet.se</p>
       </div>
+      <nav>
+        <a href="https://www.linkedin.com/in/matildasoderhall/" target="_blank">
+          <i data-feather="linkedin"></i>
+        </a>
+        <a href="https://github.com/matildasoderhall" target="_blank">
+          <i data-feather="github"></i>
+        </a>
+        <a href="https://www.instagram.com/matildasoderhall/" target="_blank">
+          <i data-feather="instagram"></i>
+        </a>
+      </nav>
     </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
