fix layout of footer and header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <header>
       <div class="profile-card">
-        <img src="./src/images/profilbild_small.jpg" alt="" width="2994" height="2994" class="profile-img">
+        <div class="img-container">
+          <img src="./src/images/profilbild_small.jpg" alt="" class="profile-img" width="2994" height="2994">
+        </div>
         <div class="profile-info">
           <h1>
             <span class="my-name">Matilda Söderhäll</span>
