fix html of tech-list and add styling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,24 @@
     </header>
     <section class="tech-container">
       <h2>Tech</h2>
-      <p>HTML, CSS, Sass, JavaScript, Vue, React, Node.js, Maria DB, MongoDB, Web Accessiblity, API:s, par-programming, Github.</p>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Sass</li>
+        <li>JavaScript</li>
+        <li class="bold purple">TypeScript</li>
+        <li>Vue</li>
+        <li class="bold orange">React</li>
+        <li>Next.js</li>
+        <li>Node.js</li>
+        <li>Maria DB</li>
+        <li>MongoDB</li>
+        <li class="bold charcoal">Webb Accessiblity</li>
+        <li>API:s</li>
+        <li>Pair-programming</li>
+        <li>GitHub</li>
+        <li>Git</li>
+      </ul>
     </section>
     <main>
       <h2>Featured Projects</h2>
