try fixing routes (again)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="profile-card">
         <div class="img-container">
-          <img src="./public/images/profilbild_small.jpg" alt="" class="profile-img" width="2994" height="2994">
+          <img src="/images/profilbild_small.jpg" alt="" class="profile-img" width="2994" height="2994">
         </div>
         <div class="profile-info">
           <h1>
@@ -52,7 +52,7 @@
         <li>Node.js</li>
         <li>Maria DB</li>
         <li>MongoDB</li>
-        <li class="bold charcoal">Webb Accessiblity</li>
+        <li class="bold charcoal">Web Accessiblity</li>
         <li>API:s</li>
         <li>Pair-programming</li>
         <li>GitHub</li>
@@ -104,7 +104,7 @@
     <footer>
       <h2>Get in touch!</h2>
       <div class="img-container">
-        <img src="./public/images/profilbild_small.jpg" alt="" class="profile-img" width="2994" height="2994">
+        <img src="/images/profilbild_small.jpg" alt="" class="profile-img" width="2994" height="2994">
       </div>
       <h3>
         <span class="my-name">Matilda Söderhäll</span>
